Fix alignment issue?

--- a/src/site/_includes/sass/_cards.scss
+++ b/src/site/_includes/sass/_cards.scss
@@ -104,6 +104,11 @@ $card-offset: 2%;
 	> * + * {
 		margin-top: 1rem;
 	}
+
+	h2,
+	h3 {
+		margin-top: 0;
+	}
 }
 .ll-card--intro__title {
 }
